# mplunitx

./: .gitignore  .readthedocs.yaml  README.md  README.rst  environment.yaml  setup.cfg
.github/workflows/: publish-to-pypi.yml
docs/: conf.py  index.rst  installation.rst  mplunitx.number.rst  mplunitx.sisetup.label.rst  mplunitx.sisetup.num.rst  mplunitx.sisetup.qty.rst  mplunitx.sisetup.rst  mplunitx.sisetup.unit.rst  mplunitx.unit._unit_kw.rst  mplunitx.unit._unit_kw.update.rst  mplunitx.unit.declared_units.rst  mplunitx.unit.rst  mplunitx.unit.si_prefixes.rst  reference.rst  requirements.txt  tutorials.rst
docs/_notebooks/: getting_started.ipynb  unit.ipynb
docs/_templates/: mplunitx_class.rst  mplunitx_method.rst  mplunitx_module.rst
src/mplunitx/: _sisetup.py  sisetup.py  unit.py
src/siunitpy/: quantity.py  sisetup.py  unit.py
src/siunitx/: __init__.py  number.py  sisetup.py  unit.py
