[metadata]
name = mplunitx
version = attr: mplunitx.__version__
author = Adrian Peter Krone
author_email = adrian.krone@physik.uni-kassel.de
description = Units in python strings for matplotlib labels
long_description = file: README.rst
long_description_content_type = text/x-rst
license = "MIT"
license_files = file: LICENSE

[options]
package_dir=
    =src
packages = find:
include_package_data = True
python_requires = >=3.9
install_requires =
    matplotlib >= 3.7

[options.packages.find]
where = src
